refactored the templates and css, removing lots of too fancy stuff not being used. Fixes all layout bugs in Firefox, Safari, Opera and Chrome

--- a/static/css/core.css
+++ b/static/css/core.css
@@ -1,77 +1,36 @@
-/*-  BASE STYLES
-----------------------------------------------------------------------*/
-
-/*- self-clearing floats ----------*/
-
-.mod:after {
-	content: ".";
-	display: block;
-	height: 0;
-	clear: both;
-	visibility: hidden;
-}
-
-/*- fluid images and objects ----------*/
-
-img,
-object,
-embed {max-width: 100%;}
-
-
-/*- optional vanity styles ----------*/
-
-::selection {background: #c80000;}
-::-moz-selection {background: #c80000;}
-
-img::selection {background: transparent;}
-img::-moz-selection {background: transparent;}
-
-@media only screen and (max-device-width: 480px) {
-
-	html {-webkit-text-size-adjust: none}
-	a {-webkit-tap-highlight-color: rgba(200,0,0,0.4);}
-
-}
-
-/*- LET'S GET STARTED!
-----------------------------------------------------------------------*/
-
-body {
-	background-color: #fff;
-	color: #000;
-	margin: 0;
-	padding: 0;
-}
+/*
+Copyright (c) 2010, Yahoo! Inc. All rights reserved.
+Code licensed under the BSD License:
+http://developer.yahoo.com/yui/license.html
+version: 3.2.0
+build: 2676
+*/
+html{color:#000;background:#FFF;}body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input,textarea,p,blockquote,th,td{margin:0;padding:0;}table{border-collapse:collapse;border-spacing:0;}fieldset,img{border:0;}address,caption,cite,code,dfn,em,strong,th,var{font-style:normal;font-weight:normal;}li{list-style:none;}caption,th{text-align:left;}h1,h2,h3,h4,h5,h6{font-size:100%;font-weight:normal;}q:before,q:after{content:'';}abbr,acronym{border:0;font-variant:normal;}sup{vertical-align:text-top;}sub{vertical-align:text-bottom;}input,textarea,select{font-family:inherit;font-size:inherit;font-weight:inherit;}input,textarea,select{*font-size:100%;}legend{color:#000;}
 
 body{font:13px/1.231 arial,helvetica,clean,sans-serif;*font-size:small;*font:x-small;}select,input,button,textarea{font:99% arial,helvetica,clean,sans-serif;}table{font-size:inherit;font:100%;}pre,code,kbd,samp,tt{font-family:monospace;*font-size:108%;line-height:100%;}
 
-abbr {
-	cursor: help;
+html {
+  background: #FFF url('/static/img/bg.png') -250px 0 repeat-y;  
 }
 
-html {
-    background: #FFF url('/static/img/bg.png') -250px 0 repeat-y;  
-}
-header {
+#head {
   position: absolute;
   background: #FFF url('/static/img/animal-scale.jpg') 0 110px no-repeat;
   height: 500px;
   width: 450px; 
 }
 
-header p {
+#head p {
   margin: 0 80px 1em 80px;
   line-height: 1.4;
   font-size: 1.3em;
-}
-footer {
-    clear: both;
-    padding-top: 30px;
+  padding-bottom: 20px;
 }
 
 strong {
   font-weight: bold;
 }
+
 h1 {
   text-transform: uppercase;
   font-size: 3em;
@@ -85,90 +44,103 @@ h1 span {
   font-weight: normal;
 }
 
-.controls {
+#main {
+  background: #D2D2D2;
+  margin-left: 450px;
+}
+
+#main ul {
+  margin: 15px 15px 30px;
+  float: left;
+}
+
+#main ul li {
+  float: left;
+  background: #F2F2F2;
+  padding: 10px;
+  margin-bottom: 10px;
+  border-radius: 10px;
+  -moz-border-radius: 10px;
+  -webkit-border-radius: 10px;
+  border: 2px solid #A3A3A3;
+  width: 95%;
+}
+
+#main li img {
+  position: absolute;
+}
+
+#main li p,
+#main li h2,
+#main li div 
+{
+  margin-left: 55px;
+}
+
+#main li h2 {
+  font-style: italic;
+}
+
+#main li h2 em {
+  font-style: normal;
+  font-weight: bold;
+}
+
+#main li div {
+  margin-bottom: 10px;
+}
+
+#main li a {
+  color: #0F75E2;
+}
+
+#main li p {
+    color: #666;
+}
+
+#controls {
   background: #202020;
   padding: 15px;
   border-top: 4px solid #151515
 }
 
-.controls p { 
+#controls p { 
   line-height: 2em;
   color: #EFEFEF;
 }
 
-.controls img {
+#controls img {
   float: left;
   margin-right: 15px;
 }
 
-.controls label,
-.controls input,
-.controls textarea 
+#controls label,
+#controls input,
+#controls textarea 
 {
   display: block;
   width: 100%;
 }
 
-.controls label {
+#controls label {
   color: #EFEFEF;
   margin-top: 10px;
 }
 
-.controls textarea {
+#controls textarea {
   margin-bottom: 15px;
 }
 
-.controls input.btn {
+#controls input.btn {
   width: auto;
 }
 
-body section {
-    background: #D2D2D2;
-    margin-left: 450px;
+footer {
+    clear: both;
+    margin: 0 15px;
+    display: block;
 }
 
-.sessions {
-  margin: 20px;
-}
-
-.session {
-  background: #F2F2F2;
-  padding: 10px;
-  margin: 0 2.5% 10px 0;
-  border-radius: 10px;
-  -moz-border-radius: 10px;
-  -webkit-border-radius: 10px;
-  border: 2px solid #A3A3A3;
-  width: 96%;
-}
-
-.session img {
-  position: absolute;
-}
-
-.session p,
-.session a,
-.session h2, 
-.session h3,
-.session a
-{
-  margin-left: 55px;
-}
-
-.session h2 {
-  font-style: normal;
-  font-weight: bold;
-}
-
-.session h3 {
-  font-style: italic;
-}
-
-
-.session p {
-  margin-bottom: 10px;
-}
-
-.session a {
-  color: #0F75E2;
+footer a {
+    color: #0F75E2;
 }
